--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello</title>
+    <title>Hello</title> 
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <p>Hello World! </p>
