--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Emma Madsen</hi>
+    <h1>Emma Madsen</h1>
     <hr>
     <h2>2. One Minute Story</h2> 
     <iframe width="560" height="202" src="https://www.bandlab.com/embed/?id=c62bbcaf-dc32-ed11-b494-000d3a3ee5f3" frameborder="0" allowfullscreen></iframe>
   </body>
+  <h2>4. Notation</h2>
+  <a href="media/White Winter Hymnal.dorico">Dorico File</a>
+  <a href="media/White Winter Hymnal.xml">XML File</a>
+  <a href="media/White Winter Hymnal.mid">Mid File</a>
+ <a href="media/01 - Full score - White Winter Hymnal.pdf">PDF File</a>
+  
+
+
 </html>
+
