--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <h2>2. One Minute Story</h2> 
     <iframe width="560" height="202" src="https://www.bandlab.com/embed/?id=c62bbcaf-dc32-ed11-b494-000d3a3ee5f3" frameborder="0" allowfullscreen></iframe>
   </body>
+ 
   <h2>4. Notation</h2>
-  <a href="media/White Winter Hymnal.dorico">Dorico File</a>
-  <a href="media/White Winter Hymnal.xml">XML File</a>
-  <a href="media/White Winter Hymnal.mid">Mid File</a>
- <a href="media/01 - Full score - White Winter Hymnal.pdf">PDF File</a>
+  <ul>
+    <li><a href="media/White Winter Hymnal.dorico">Dorico File</a></li>
+    <li><a href="media/White Winter Hymnal.xml">XML File</a></li> 
+    <li><a href="media/White Winter Hymnal.mid">Mid File</a></li>
+    <li><a href="media/01 - Full score - White Winter Hymnal.pdf">PDF File</a></li>
+  </ul>
+  
+   
   
 
 
