--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
   <ul>
     <li><a href="media/White Winter Hymnal.dorico">Dorico File</a></li>
     <li><a href="media/White Winter Hymnal.xml">XML File</a></li> 
-    <li><a href="media/White Winter Hymnal.mid">Mid File</a></li>
+    <li><a href="media/White Winter Hymnal.mid">Midi File</a></li>
     <li><a href="media/01 - Full score - White Winter Hymnal.pdf">PDF File</a></li>
   </ul>
   
-   
+      <h1>Emma Madsen</h1>
+    <hr>
+    <h2>5. Synthesis</h2> 
+    <iframe width="560" height="202" src="https://youtu.be/Cy-WC1HY0Ls" frameborder="0" allowfullscreen></iframe>
+  </body> 
   
 
 
