--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
   
     <hr>
     <h3>5. Synthesis</h3> 
-    <iframe width="560" height="202" src="https://youtu.be/Cy-WC1HY0Ls" frameborder="0" allowfullscreen></iframe>
-  </body> 
+    <<iframe width="560" height="315" src="https://www.youtube.com/embed/Cy-WC1HY0Ls" title="YouTube video player" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
 
 
