--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
     <li><a href="media/White Winter Hymnal.mid">Midi File</a></li>
     <li><a href="media/01 - Full score - White Winter Hymnal.pdf">PDF File</a></li>
   </ul>
-  
-    <hr>
-    <h3>5. Synthesis</h3> 
-    <<iframe width="560" height="315" src="https://www.youtube.com/embed/Cy-WC1HY0Ls" title="YouTube video player" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  
-
-
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Cy-WC1HY0Ls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
 </html>
 
