--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <hr>
     <h2>2. One Minute Story</h2> 
     <iframe width="560" height="202" src="https://www.bandlab.com/embed/?id=c62bbcaf-dc32-ed11-b494-000d3a3ee5f3" frameborder="0" allowfullscreen></iframe>
+ 
   </body>
  
   <h2>4. Notation</h2>
@@ -23,6 +24,7 @@
     <li><a href="media/01 - Full score - White Winter Hymnal.pdf">PDF File</a></li>
   </ul>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Cy-WC1HY0Ls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   
+   <script src="index.js" charset="utf-8" 
+  </body>
 </html>
 
