--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li><a href="media/01 - Full score - White Winter Hymnal.pdf">PDF File</a></li>
   </ul>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Cy-WC1HY0Ls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   <script src="index.js" charset="utf-8" 
+  <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
 
